# iced_router

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/enum_example/: Cargo.toml
examples/enum_example/src/: main.rs
examples/enum_history/: Cargo.toml
examples/enum_history/src/: main.rs
examples/string_example/: Cargo.toml
examples/string_example/src/: main.rs
examples/string_history/: Cargo.toml
examples/string_history/src/: clock.rs  main.rs
iced_history/: Cargo.toml
iced_history/src/: history_trait.rs  state.rs
src/: history_trait.rs  lib.rs
