[package]
edition = "2021"
name = "enum_example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = {version = "0.3.20", features = ["local-offset"]}
once_cell = "1.17.1"

[dependencies.iced]
features = ["canvas", "tokio", "debug"]
version = "0.8.0"

[dependencies.iced_router]
path = "../../"
